--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<!-- begin [MENU] -->
 	<div class="container">
 		<div class="menu hidden-xs">
-			<ul>
+			<ul class="round-xs">
 				<li><a href="#">Store Location</a></li>
 				<li><a href="#">Furnitures</a></li>
 				<li><a href="#">Contact</a></li>
@@ -62,46 +62,31 @@
 	<div class="main hidden-xs">
 		<div id="mi-slider" class="mi-slider">
 			<ul>
-				<li><a href="#"><img src="images/bed1.jpg" alt="Lorem"><h4>Lorem</h4></a></li>
-				<li><a href="#"><img src="images/bed2.jpg" alt="Ipsum"><h4>Ipsum</h4></a></li>
-				<li><a href="#"><img src="images/bed3.jpg" alt="Dolor"><h4>Dolor</h4></a></li>
-				<li><a href="#"><img src="images/bed4.jpg" alt="Sit Amet"><h4>Sit Amet</h4></a></li>
+				<li><a href="#"><img src="images/products/workstation1.jpg" alt="Workstation"><h4>Workstation</h4></a></li>
+				<li><a href="#"><img src="images/products/workstation2.jpg" alt="Workstation"><h4>Workstation</h4></a></li>
+				<li><a href="#"><img src="images/products/workstation3.jpg" alt="Workstation"><h4>Workstation</h4></a></li>
+				<li><a href="#"><img src="images/products/workstation4.jpg" alt="Workstation"><h4>Workstation</h4></a></li>
 			</ul>
 			<ul>
-				<li><a href="#"><img src="images/table1.jpg" alt="Cosectetur"><h4>Cosectetur</h4></a></li>
-				<li><a href="#"><img src="images/table2.jpg" alt="Adipiscing"><h4>Adipiscing</h4></a></li>
-				<li><a href="#"><img src="images/table3.jpg" alt="Elit"><h4>Elit</h4></a></li>
-				<li><a href="#"><img src="images/table4.jpg" alt="Lorem"><h4>Lorem</h4></a></li>
+				<li><a href="#"><img src="images/products/conference1.jpg" alt="Conference Room"><h4>Conference Room</h4></a></li>
+				<li><a href="#"><img src="images/products/conference2.jpg" alt="Conference Room"><h4>Conference Room</h4></a></li>
 			</ul>
 			<ul>
-				<li><a href="#"><img src="images/seat1.jpg" alt="Ipsum"><h4>Ipsum</h4></a></li>
-				<li><a href="#"><img src="images/seat2.jpg" alt="Dolor"><h4>Dolor</h4></a></li>
-				<li><a href="#"><img src="images/seat3.jpg" alt="Sit Amet"><h4>Sit Amet</h4></a></li>
+				<li><a href="#"><img src="images/products/reception1.jpg" alt="Reception"><h4>Reception</h4></a></li>
+				<li><a href="#"><img src="images/products/reception2.jpg" alt="Reception"><h4>Reception</h4></a></li>
+				<li><a href="#"><img src="images/products/reception3.jpg" alt="Reception"><h4>Reception</h4></a></li>
+				<li><a href="#"><img src="images/products/reception4.jpg" alt="Reception"><h4>Reception</h4></a></li>
 			</ul>
 			<ul>
-				<li><a href="#"><img src="images/storage1.jpg" alt="Cosectetur"><h4>Cosectetur</h4></a></li>
-				<li><a href="#"><img src="images/storage2.jpg" alt="Adipiscing"><h4>Adipiscing</h4></a></li>
-				<li><a href="#"><img src="images/storage3.jpg" alt="Elit"><h4>Elit</h4></a></li>
-				<li><a href="#"><img src="images/storage4.jpg" alt="Lorem"><h4>Lorem</h4></a></li>
-			</ul>
-			<ul>
-				<li><a href="#"><img src="images/tabletop1.jpg" alt="Ipsum"><h4>Ipsum</h4></a></li>
-				<li><a href="#"><img src="images/tabletop2.jpg" alt="Dolor"><h4>Dolor</h4></a></li>
-				<li><a href="#"><img src="images/tabletop3.jpg" alt="Sit Amet"><h4>Sit Amet</h4></a></li>
-				<li><a href="#"><img src="images/tabletop4.jpg" alt="Cosectetur"><h4>Cosectetur</h4></a></li>
-			</ul>
-			<ul>
-				<li><a href="#"><img src="images/workplace1.jpg" alt="Adipiscing"><h4>Adipiscing</h4></a></li>
-				<li><a href="#"><img src="images/workplace2.jpg" alt="Elit"><h4>Elit</h4></a></li>
-				<li><a href="#"><img src="images/workplace3.jpg" alt="Lorem"><h4>Lorem</h4></a></li>
+				<li><a href="#"><img src="images/products/furniture1.jpg" alt="Customized Furnitures"><h4>Customized Furnitures</h4></a></li>
+				<li><a href="#"><img src="images/products/furniture2.jpg" alt="Customized Furnitures"><h4>Customized Furnitures</h4></a></li>
+				<li><a href="#"><img src="images/products/furniture3.jpg" alt="Customized Furnitures"><h4>Customized Furnitures</h4></a></li>
 			</ul>
 			<nav>
-				<a href="#">Beds</a>
-				<a href="#">Tables</a>
-				<a href="#">Seating</a>
-				<a href="#">Storage</a>
-				<a href="#">Table Top</a>
-				<a href="#">Workplace</a>
+				<a href="#">Workstation</a>
+				<a href="#">Conference Rooms</a>
+				<a href="#">Reception</a>
+				<a href="#">Customized Furnitures</a>
 			</nav>
 		</div>
 	</div>
@@ -112,44 +97,40 @@
 	<!-- begin [MOBILE SLIDER] -->
 	<div id="responsiveslide" class="responsiveslide visible-xs">
 		<nav>
-			<a href="#" id="Beds">Beds</a>
-			<a href="#" id="Tables">Tables</a>
-			<a href="#" id="Seating">Seating</a>
-			<a href="#" id="Storage">Storage</a>
-			<a href="#" id="TableTop">Table Top</a>
-			<a href="#" id="Workplace">Workplace</a>
+			<a href="#" id="Workstation">Workstation</a>
+			<a href="#" id="Conference">Conference Rooms</a>
+			<a href="#" id="Reception">Reception</a>
+			<a href="#" id="Furnitures">Customized Furnitures</a>
 		</nav>
 		<div id="responsiveslide-image" class="responsiveslide-image">
 			<div class="responsiveslide-image-container">
-				<div id="Beds" class="show">
-					<a href="#"><img src="images/bed1.jpg" class="img-responsive" /></a>
-					<h4>Lorem Ipsum</h4>
-					<a href="#" class="btn btn-danger btn-md">View All Bed Furnitures</a>
+				<div id="Workstation" class="show">
+					<a href="#"><img src="images/products/workstation1.jpg" class="img-responsive" /></a>
+					<br />
+					<a href="#"><img src="images/products/workstation2.jpg" class="img-responsive" /></a>
+					<h4>Workstation</h4>
+					<a href="#" class="btn btn-danger btn-md">View All Workstation</a>
 				</div>
-				<div id="Tables">
-					<a href="#"><img src="images/table1.jpg" class="img-responsive" /></a>
+				<div id="Conference">
+					<a href="#"><img src="images/products/conference1.jpg" class="img-responsive" /></a>
+					<br />
+					<a href="#"><img src="images/products/conference2.jpg" class="img-responsive" /></a>
 					<h4>Dolor Sit Amet</h4>
 					<a href="#" class="btn btn-danger btn-md">View All Table Furnitures</a>
 				</div>
-				<div id="Seating">
-					<a href="#"><img src="images/seat1.jpg" class="img-responsive" /></a>
+				<div id="Reception">
+					<a href="#"><img src="images/products/reception1.jpg" class="img-responsive" /></a>
+					<br />
+					<a href="#"><img src="images/products/reception2.jpg" class="img-responsive" /></a>
 					<h4>Consectetur</h4>
 					<a href="#" class="btn btn-danger btn-md">View All Seat Furnitures</a>
 				</div>
-				<div id="Storage">
-					<a href="#"><img src="images/storage1.jpg" class="img-responsive" /></a>
+				<div id="Furnitures">
+					<a href="#"><img src="images/products/furniture1.jpg" class="img-responsive" /></a>
+					<br />
+					<a href="#"><img src="images/products/furniture2.jpg" class="img-responsive" /></a>
 					<h4>Adipscing Elit</h4>
 					<a href="#" class="btn btn-danger btn-md">View All Storage Furnitures</a>
-				</div>
-				<div id="TableTop">
-					<a href="#"><img src="images/tabletop1.jpg" class="img-responsive" /></a>
-					<h4>Lorem Ipsum Dolor</h4>
-					<a href="#" class="btn btn-danger btn-md">View All Table Top Furnitures</a>
-				</div>
-				<div id="Workplace" class="">
-					<a href="#"><img src="images/workplace1.jpg" class="img-responsive" /></a>
-					<h4>Lorem</h4>
-					<a href="#" class="btn btn-danger btn-md">View All Workplace Furnitures</a>
 				</div>
 			</div>
 		</div>
