--- a/index.html
+++ b/index.html
@@ -17,45 +17,51 @@
 <body>
 
 
-	<!-- begin [LOGO] -->
-	<div class="container">
-		<div class="logo text-center"><a href="#"><img src="images/logo.png" class="img-responsive" /></a></div>
-	</div>
-	<!-- end [LOGO] -->
 
+	<!-- begin [HEADER] -->
+	<div class="header">
 
-	<!-- begin [MENU] -->
-	<div class="container">
-		<div class="menu hidden-xs">
-			<ul class="round-xs">
-				<li><a href="#">Store Location</a></li>
-				<li><a href="#">Furnitures</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
+		<!-- begin [LOGO] -->
+		<div class="container">
+			<div class="logo text-center"><a href="#"><img src="images/logo.png" class="img-responsive" /></a></div>
 		</div>
-		<div class="visible-xs text-center">
-			<button type="button" id="responsivemenubutton" class="responsivebutton round-xs">MENU</button>
+		<!-- end [LOGO] -->
+
+		<!-- begin [MENU] -->
+		<div class="container">
+			<div class="menu hidden-xs">
+				<ul class="round-xs">
+					<li><a href="#">Store Location</a></li>
+					<li><a href="#">Furnitures</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+			<div class="visible-xs text-center">
+				<button type="button" id="responsivemenubutton" class="responsivebutton round-xs">MENU</button>
+			</div>
+			<div class="socialmedia">
+				<ul>
+					<li><a href="#" class="fa fa-facebook round-circle"></a></li>
+					<li><a href="#" class="fa fa-twitter round-circle"></a></li>
+					<li><a href="#" class="fa fa-pinterest round-circle"></a></li>
+				</ul>
+			</div>
 		</div>
-		<div class="socialmedia">
+		<!-- end [MENU] -->
+
+		<!-- begin [RESPONSIVE MENU] -->
+		<div id="responsivemenu" class="responsivemenu visible-xs">
 			<ul>
-				<li><a href="#" class="fa fa-facebook round-circle"></a></li>
-				<li><a href="#" class="fa fa-twitter round-circle"></a></li>
-				<li><a href="#" class="fa fa-pinterest round-circle"></a></li>
+				<li><a href="#" class="round-xs">Store Location</a></li>
+				<li><a href="#" class="round-xs">Furnitures</a></li>
+				<li><a href="#" class="round-xs">Contact</a></li>
 			</ul>
 		</div>
-	</div>
-	<!-- end [MENU] -->
+		<!-- end [RESPONSIVE MENU] -->
 
-
-	<!-- begin [RESPONSIVE MENU] -->
-	<div id="responsivemenu" class="responsivemenu visible-xs">
-		<ul>
-			<li><a href="#" class="round-xs">Store Location</a></li>
-			<li><a href="#" class="round-xs">Furnitures</a></li>
-			<li><a href="#" class="round-xs">Contact</a></li>
-		</ul>
 	</div>
-	<!-- end [RESPONSIVE MENU] -->
+	<!-- end [HEADER] -->
+
 
 
 	<!-- begin [SLIDER] -->
