--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
 		<div class="container">
 			<div class="menu hidden-xs">
 				<ul class="round-xs">
-					<li class="active"><a href="index.html"><span class="fa fa-home"></span></a></li><li>
+					<li><a href="index.html"><span class="fa fa-home"></span></a></li><li>
 					<a href="location.html">Location</a></li><li>
-					<a href="products.html">Products</a></li><li>
+					<a href="products.html">Products</a></li><li class="active">
 					<a href="portfolio.html">Portfolio</a></li><li>
 					<a href="contact.html">Contact</a></li>
 				</ul>
@@ -55,11 +55,11 @@
 		<!-- begin [RESPONSIVE MENU] -->
 		<div id="responsivemenu" class="responsivemenu visible-xs">
 			<ul>
-				<li class="active"><a href="index.html" class="round-xs"><span class="fa fa-home"></span></a></li>
-				<li><a href="location.html" class="round-xs">Location</a></li>
-				<li><a href="products.html" class="round-xs">Products</a></li>
-				<li><a href="portfolio.html" class="round-xs">Portfolio</a></li>
-				<li><a href="contact.html" class="round-xs">Contact</a></li>
+				<li><a href="index.html" class="round-xs"><span class="fa fa-home"></span></a></li>
+				<li><a href="location.html">Location</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li class="active"><a href="portfolio.html" class="round-xs">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<!-- end [RESPONSIVE MENU] -->
@@ -69,92 +69,47 @@
 
 
 
-	<!-- begin [SLIDER] -->
-	<div class="main hidden-xs">
-		<div id="mi-slider" class="mi-slider">
-			<ul>
-				<li><a href="products-workstations.html"><img src="images/products/workstation1.jpg" alt="Workstation"><!--<h4>Workstation</h4>--></a></li>
-				<li><a href="products-workstations.html"><img src="images/products/workstation2.jpg" alt="Workstation"><!--<h4>Workstation</h4>--></a></li>
-				<li><a href="products-workstations.html"><img src="images/products/workstation3.jpg" alt="Workstation"><!--<h4>Workstation</h4>--></a></li>
-				<li><a href="products-workstations.html"><img src="images/products/workstation4.jpg" alt="Workstation"><!--<h4>Workstation</h4>--></a></li>
-			</ul>
-			<ul>
-				<li><a href="products-conferences.html"><img src="images/products/conference1.jpg" alt="Conference Room"><!--<h4>Conference Room</h4>--></a></li>
-				<li><a href="products-conferences"><img src="images/products/conference2.jpg" alt="Conference Room"><!--<h4>Conference Room</h4>--></a></li>
-			</ul>
-			<ul>
-				<li><a href="products-receptions.html"><img src="images/products/reception1.jpg" alt="Reception"><!--<h4>Reception</h4>--></a></li>
-				<li><a href="products-receptions.html"><img src="images/products/reception2.jpg" alt="Reception"><!--<h4>Reception</h4>--></a></li>
-				<li><a href="products-receptions.html"><img src="images/products/reception3.jpg" alt="Reception"><!--<h4>Reception</h4>--></a></li>
-				<li><a href="products-receptions.html"><img src="images/products/reception4.jpg" alt="Reception"><!--<h4>Reception</h4>--></a></li>
-			</ul>
-			<ul>
-				<li><a href="products-furnitures.html"><img src="images/products/furniture1.jpg" alt="Customized Furnitures"><!--<h4>Customized Furnitures</h4>--></a></li>
-				<li><a href="products-furnitures.html"><img src="images/products/furniture2.jpg" alt="Customized Furnitures"><!--<h4>Customized Furnitures</h4>--></a></li>
-				<li><a href="products-furnitures.html"><img src="images/products/furniture3.jpg" alt="Customized Furnitures"><!--<h4>Customized Furnitures</h4>--></a></li>
-			</ul>
-			<nav>
-				<a href="#">Workstation</a>
-				<a href="#">Conference Rooms</a>
-				<a href="#">Reception</a>
-				<a href="#">Customized Furnitures</a>
-			</nav>
-		</div>
-	</div>
-	<!-- end [SLIDER] -->
-
-
-
-	<!-- begin [RESPONSIVE SLIDER] -->
-	<div id="responsiveslide" class="responsiveslide visible-xs">
-		<nav>
-			<a href="#" id="Workstation">Workstation</a>
-			<a href="#" id="Conference">Conference Rooms</a>
-			<a href="#" id="Reception">Reception</a>
-			<a href="#" id="Furnitures">Customized Furnitures</a>
-		</nav>
-		<div id="responsiveslide-image" class="responsiveslide-image">
-			<div class="responsiveslide-image-container">
-				<div id="Workstation" class="show">
-					<a href="products-workstations.html"><img src="images/products/workstation1.jpg" class="img-responsive"></a>
-					<a href="products-workstations.html"><img src="images/products/workstation2.jpg" class="img-responsive"></a>
-					<!--<h4>Workstation</h4>-->
-					<a href="products.html" class="btn btn-danger btn-md">View All Products</a>
-				</div>
-				<div id="Conference">
-					<a href="products-conferences.html"><img src="images/products/conference1.jpg" class="img-responsive"></a>
-					<a href="products-conferences.html"><img src="images/products/conference2.jpg" class="img-responsive"></a>
-					<!--<h4>Conference Room</h4>-->
-					<a href="products.html" class="btn btn-danger btn-md">View All Products</a>
-				</div>
-				<div id="Reception">
-					<a href="products-receptions.html"><img src="images/products/reception1.jpg" class="img-responsive"></a>
-					<a href="products-receptions.html"><img src="images/products/reception2.jpg" class="img-responsive"></a>
-					<!--<h4>Receptions</h4>-->
-					<a href="products.html" class="btn btn-danger btn-md">View All Products</a>
-				</div>
-				<div id="Furnitures">
-					<a href="products-furnitures.html"><img src="images/products/furniture1.jpg" class="img-responsive"></a>
-					<a href="products-furnitures.html"><img src="images/products/furniture2.jpg" class="img-responsive"></a>
-					<!--<h4>Customized Furnitures</h4>-->
-					<a href="products.html" class="btn btn-danger btn-md">View All Products</a>
-				</div>
+	<!-- begin [BANNER] -->
+	<div class="banner">
+		<div class="container">
+			<div class="row">
+				&nbsp;
 			</div>
 		</div>
 	</div>
-	<!-- end [RESPONSIVE SLIDER] -->
+	<!-- end [BANNER] -->
+
+
+
+	<!-- begin [LIGHTBOX CONTAINER] -->
+	<div id="lightbox" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    	<div class="modal-dialog">
+        	<button type="button" class="close hidden" data-dismiss="modal" aria-hidden="true">×</button>
+        	<div class="modal-content">
+            	<div class="modal-body"><img src="" alt="" /></div>
+        	</div>
+    	</div>
+	</div>
+	<!-- end [LIGHTBOX CONTAINER] -->
 
 
 
 	<!-- begin [CONTENT 1] -->
 	<div class="bg-white">
-		<div class="container content-section text-center">
-			<h1><a href="#">Multi-Style Specialists, Inc. (MSI)</a><br />is a multi-faceted company engaged in various fields namely office fit-outs, system integration and green technology.</h1>
-			<br />
-			<a href="location.html" class="buttonset-green">
-				<div><span class="fa fa-map-marker fa-4x"></span></div>
-				<div><span class="btn btn-lg round-xs">Our Locations</span></div>
-			</a>
+		<div class="container content-section">
+			<div class="row text-center">
+				<div><img src="images/portfolio/logo-pbcom.png" class="portfolio-image"></div><br />
+				<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-sm-offset-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/pbcom1.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/pbcom2.jpg" alt="...">
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 	<!-- end [CONTENT 1] -->
@@ -164,20 +119,17 @@
 	<!-- begin [CONTENT 2] -->
 	<div class="bg-lightestgray">
 		<div class="container content-section">
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-5 col-xs-12">
-					<a href="products.html"><img src="images/office.jpg" class="img-responsive width-full wborder-md"></a><br class="visible-xs" />
+			<div class="row text-center">
+				<div><img src="images/portfolio/logo-securitybank.png" class="portfolio-image"></div><br />
+				<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-sm-offset-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/securitybank1.jpg" alt="...">
+					</a>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-7 col-xs-12">
-					<h2>We offer to be a <a href="products.html">one-stop shop</a> for all your office-preparation needs.</h2>
-					<br />
-					<p>With years of experience tucked under our belt, MSI is proud to provide world-class service to its clients. We are equipped with dedicated, professional and highly-skilled workforce delivering only optimum results.</p>
-					<br />
-					<div>
-						<a href="products.html" class="btn btn-warning round-xs"><span class="fa fa-search"></span> Browse Our Products</a>
-						<a href="contact.html" class="btn btn-danger round-xs"><span class="fa fa-phone"></span></a>
-						<a href="location.html" class="btn btn-danger round-xs"><span class="fa fa-map-marker"></span></a>
-					</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/securitybank2.jpg" alt="...">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -190,8 +142,8 @@
 	<div class="bg-white">
 		<div class="container content-section">
 			<div class="row">
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-					<h2>Client Testimonials</h2>
+<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<h2>Client <b>Testimonials</b></h2>
 					<section id="cslide-slides" class="cslide-slides-master clearfix">
 						<div class="cslide-prev-next clearfix">
 							<span class="cslide-prev pull-left fa fa-chevron-left fa-2x"></span>
@@ -237,7 +189,7 @@
 					<br class="visible-xs" />
 					<br class="visible-xs" />
 					<div class="newsletter">
-						<h2>Newsletter Subscription</h2>
+						<h2>Newsletter <b>Subscription</b></h2>
 						<br />
 						<div>Subscribe to our newsletter and get the latest products, <a href="#">discounts</a>, promos, and news from MSI straight to your inbox. Please fill the form below.</div>
 						<br />
@@ -253,6 +205,59 @@
 		</div>
 	</div>
 	<!-- end [CONTENT 3] -->
+
+
+
+	<!-- begin [CONTENT 4] -->
+	<div class="bg-lightestgray">
+		<div class="container content-section">
+			<div class="row text-center">
+				<h2>Customized Furnitures</h2><br />
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture1.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture2.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture3.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture4.jpg" alt="...">
+					</a>
+				</div>
+
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture5.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture6.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture7.jpg" alt="...">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
+					<img src="images/portfolio/furniture8.jpg" alt="...">
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end [CONTENT 4] -->
 
 
 
@@ -297,10 +302,10 @@
 			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 				<h2><span class="fa fa-tasks"></span> Menu</h2>
 				<ul class="footer-nav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="location.html">Location</a></li>
 					<li><a href="products.html">Products</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
+					<li class="active"><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
